Fix Table Overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -78,7 +78,7 @@ html {
 table {
   border-collapse: collapse;
   border-radius: 20px;
-  overflow: hidden;
+  overflow-x: scroll;
 }
 
 .scrollToTopBtn {
@@ -103,10 +103,6 @@ img {
 .isVisible {
   pointer-events: auto;
   opacity: 1;
-}
-
-.navbar .navbar-items {
-  overflow-x: scroll
 }
 
 .dropbtn {
